<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.user.SigninFragment" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9AE0FFBB"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_title_textView"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:text="@string/signin_title"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="389dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_content_textView"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/signin_contents"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signin_mail_textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/signin_mail"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signin_mail_edit"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/signin_passwd_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/signin_passwd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signin_passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signin_content2_textView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/signin_forgot_contents"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signin_chpasswd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signin_button_changepasswd" />

            <Button
                android:id="@+id/signin_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signin_button_signup" />

            <Button
                android:id="@+id/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signin_button_signin" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>