<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9AE0FFBB"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_title_textView"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="@string/signup_title"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="526dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_contents_textView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/signup_contents"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signup_user_textView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/signup_user"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signup_user_edit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/signup_mail_textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/signup_mail"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signup_mail_edit"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/signup_passwd_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/signup_passwd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signup_passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signup_passws2_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_passwd_one"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signup_passwd2_edit"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/signup_forgot_textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/signup_passwd_forgot"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signup_forgot_edit"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signup_button" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>