<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9AE0FFBB"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passwd_title_textView"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="@string/passwd_title"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="501dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passwd_contents_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/passwd_contents"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/passwd_mail_textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/passwd_mail"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwd_mail_edit"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/passwd_forgot_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/passwd_forgot"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwd_forgot_edit"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwd_new_textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/passwd_new_passwd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwd_new_edit"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwd_check_textView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/passwd_one_passwd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwd_check_edit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/passwd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passwd_button" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>