<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9AE0FFBB"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookreply_title_textView"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/book_reply_title"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookreply_contents_textView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/book_reply_username"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookreply_book_textView"
                    android:layout_width="102dp"
                    android:layout_height="36dp"
                    android:text="@string/book_reply_bookname"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bookreply_book_edit"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookreply_booktitle_textView"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:text="@string/book_reply_booktitle"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bookreply_booktitle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookreply_replycontents_textView"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/book_reply_replycontents"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/bookreply_replycontents_edit"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookreply_satis_textView"
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/book_reply_satis"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/bookreply_satis_spin"
                    android:layout_width="370dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/satis_list" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bookreply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_reply_button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>